# poisson-rate-test

./: Cargo.toml  README.md
.github/: FUNDING.yml
releases/: poisson-rate-test_1.2.2_amd64.deb
src/: lib..rs  lib.rs
